Adding different resolutions of big images

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -227,8 +227,12 @@
                         The landmasses - Afroeurasia, America, Antarctica and Australia make up the continents.
                         Just like the oceans, many landforms shape up the land surface - mountains, plateaus, plains, volcanoes and many more.
                     </p>
-                    <div class="captionbox center" style="width:1026px;">
-                        <img class="articleimage" src="../assets/images/maps/earth-satellite-map.png" alt="Map of Earth" width="1024" height="512">
+                    <div class="captionbox center">
+                        <picture>
+                            <source media="(max-width:768px)" srcset="../assets/images/maps/earth-satellite-map-small.png">
+                            <source media="(min-width:768px) and (max-width:1366px)" srcset="../assets/images/maps/earth-satellite-map-medium.png">
+                            <img class="articleimage" src="../assets/images/maps/earth-satellite-map.png" alt="Map of Earth">
+                        </picture>
                         <p class="caption">True color satellite map of Earth</p>
                     </div>
                 </div>
