--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -151,9 +151,13 @@
                         Phobos is the bigger of the two and orbits closer to Mars. 
                         Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
                     </p>
-                    <div class="captionbox center" style="width:375.25px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
-                        <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
+                        </div>
                         <p class="caption">Phobos and Deimos are irregularly-shaped satellites of Mars</p>
                     </div>
                 </div>
@@ -166,11 +170,19 @@
                         Of the four, Europa is the only one that is smaller than Earth's Moon. 
                         Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
                     </p>
-                    <div class="captionbox center" style="width:722px;">
-                        <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
-                        <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
-                        <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
-                        <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
+                        </div>
                         <p class="caption">The four Galilean moons - Ganymede, Callisto, Io and Europa</p>
                     </div>
                     <p class="paragraph">
@@ -207,13 +219,25 @@
                     <p class="paragraph">
                         Other round moons are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
                     </p>
-                    <div class="captionbox center" style="width:730.5px;">
-                        <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea" width="120.5" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="118" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas" width="120" height="120">
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea" width="120.5" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="118" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas" width="120" height="120">
+                        </div>
                         <p class="caption">Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.</p>
                     </div>
                 </div>
@@ -228,13 +252,23 @@
                         27 moons are known to orbit <a href="uranus.html">Uranus</a>, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
                     </p>
-                    <div class="captionbox center" style="width:610px;">
-                        <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/oberon.jpg" alt="Oberon" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/umbriel.jpg" alt="Umbriel" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/ariel.jpg" alt="Ariel" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda" width="120" height="120">
-                        <p class="caption">Titania, Oberon, Umbriel, Ariel and Miranda</p>
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/oberon.jpg" alt="Oberon" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/umbriel.jpg" alt="Umbriel" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/ariel.jpg" alt="Ariel" width="120" height="120">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda" width="120" height="120">
+                        </div>
+                            <p class="caption">Titania, Oberon, Umbriel, Ariel and Miranda</p>
                     </div>
                 </div>
                 <div class="articlediv">
