--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -214,7 +214,10 @@
                 </div>
                 <div class="articlediv">
                     <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/other/saturn-rings.png" alt="Rings of Saturn" width="800" height="480">
+                        <picture>
+                            <source media="(max-width:1200px)" srcset="../assets/images/other/saturn-rings-small.png">
+                            <img class="articleimage" src="../assets/images/other/saturn-rings.png" alt="Rings of Saturn">
+                        </picture>
                         <p class="caption">Rings of Saturn, seen by the Cassini orbiter</p>
                     </div>
                     <h3 class="paragraphsubheader" id="RingSystem">Ring system</h3>
