--- a/pages/venus.html
+++ b/pages/venus.html
@@ -204,8 +204,12 @@
                         Tesserae are some of the oldest surfaces on Venus.
                         Aphrodita Terra, Ishtar Terra, Beta Regio, Phoebe Regio and Alpha Regio are some of the regions where most tesserae are located.
                     </p>
-                    <div class="captionbox center" style="width:1154.2px;">
-                        <img class="articleimage" src="../assets/images/maps/venus-topography-map.jpg" alt="Venus topographic map" width="1152.2" height="576">
+                    <div class="captionbox center">
+                        <picture>
+                            <source media="(max-width:1200px)" srcset="../assets/images/maps/venus-topography-map-small.png">
+                            <source media="(min-width:1200px) and (max-width:1680px)" srcset="../assets/images/maps/venus-topography-map-medium.png">
+                            <img class="articleimage" src="../assets/images/maps/venus-topography-map.png" alt="Venus topographic map">
+                        </picture>
                         <p class="caption">Topographic map of Venus, Magellan</p>
                     </div>
                 </div>
@@ -253,9 +257,12 @@
                         Other missions have visited the planet, with one still in progress (Akatsuki).
                         Future NASA missions VERITAS and DAVINCI+ are planned to visit the planet.
                     </p>
-                    <div class="captionbox center" style="width:502px;">
-                        <img class="articleimage" src="../assets/images/other/venera-13-color-panorama.jpg" alt="Venera 13 color panorama" width="500" height="105">
-                        <p class="caption">Venera 13 color panorama of the Venusian surface</p>
+                    <div class="captionbox center">
+                        <picture>
+                            <source media="(max-width:680px)" srcset="../assets/images/other/venera-13-color-panorama-small.png">
+                            <img class="articleimage" src="../assets/images/other/venera-13-color-panorama.png" alt="Venera 13 color panorama">
+                        </picture>
+                        <p class="caption">Venera 13 color panorama</p>
                     </div>
                 </div>
                 <h2 class="paragraphheader" id="Habitability">Habitability</h2>
