--- a/pages/mars.html
+++ b/pages/mars.html
@@ -176,8 +176,12 @@
                 </p>
                 <h3 class="paragraphsubheader" id="Surface">Surface</h3>
                 <div class="articlediv">
-                    <div class="captionbox center" style="width:514px;">
-                        <img class="articleimage" src="../assets/images/maps/mars-satellite-map.jpg" alt="Map of Mars" width="512" height="256">
+                    <div class="captionbox center">
+                        <picture>
+                            <source media="(max-width:768px)" srcset="../assets/images/maps/mars-satellite-map-small.png">
+                            <source media="(min-width:768px) and (max-width:1366px)" srcset="../assets/images/maps/mars-satellite-map-middle.png">
+                            <img class="articleimage" src="../assets/images/maps/mars-satellite-map.jpg" alt="Map of Mars">
+                        </picture>
                         <p class="caption">True color satellite map of Mars</p>
                     </div>
                 </div>
@@ -213,6 +217,8 @@
                         Dark spots on Mars like Syrtis Major are albedo features significantly darker than the surrounding terrain.
                         The dark colors come from the basaltic volcanic rock of the regions and the relative lack of dust. 
                     </p>
+                </div>
+                <div class="mapdiv">
                     <div class="captionbox center" style="width:1026px;">
                         <img class="articleimage" src="../assets/images/maps/mars-topography-map.jpg" alt="Topography map of Mars" width="1024" height="585.6" usemap="#marstop">
                         <p class="caption">Clickable topographic map of Mars - Mars Global Surveyor</p>
@@ -220,7 +226,7 @@
                         <map name="marstop">
                             <area shape="rect" coords="134,146,240,343" alt="Tharsis" href="https://en.wikipedia.org/wiki/Tharsis">
                             <area shape="rect" coords="241,298,404,353" alt="Valles Marineris" href="https://en.wikipedia.org/wiki/Valles_Marineris">
-         
+                 
                         </map>
                     </div>
                 </div>
@@ -255,10 +261,14 @@
                         Both satellites' orbits are near the equator.
                         Of the two, Phobos is the one orbiting closer to Mars.
                     </p>
-                    <div class="captionbox center" style="width:375.25px;">
-                        <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
-                        <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
-                        <p class="caption">Phobos and Deimos are the only two satellites of Mars</p>
+                    <div class="imgwrapper">
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
+                        </div>
+                        <div class="captionbox center">
+                            <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
+                        </div>
+                        <p class="caption">Phobos and Deimos are irregularly-shaped satellites of Mars</p>
                     </div>
                 </div>
                 <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
