--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -61,6 +61,38 @@
             <h2 class="asidetitle">Uranus</h2>
             <ul class="toc">
                 <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#Discovery">Discovery</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Size">Size</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructure">Internal structure</a>
+                        </li>
+                        <li>
+                            <a href="#AtmosphereAndClimate">Atmosphere and climate</a>
+                        </li>
+                        <li>
+                            <a href="#Rings">Rings</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Satellites">Satellites</a>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+                <li>
                     <a href="#ExternalLinks">External links</a>
                 </li>
             </ul>
@@ -78,19 +110,77 @@
                 <div class="articlediv">
                     <div class="captionbox right">
                         <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus" width="240" height="240">
-                        <p class="caption">Uranus</p>
+                        <p class="caption">Uranus, Voyager 2</p>
                     </div>
                     <p class="paragraph">
-                        Uranus is the seventh planet in the Solar System. 
-                        It is the third biggest planet in the Solar System. 
+                        Uranus is the seventh <a href="planet.html">planet</a> from the Sun. 
+                        It is also the third biggest planet in the Solar System. 
                         It is named after the Greek god, who represents the sky. 
-                        Uranus, just like the other ice giant Neptune, consists of volatiles (ices), whereas the gas giants are mostly made up of hydrogen and helium. 
-                        Just like the other giants, Uranus has a ring system. 
+                    </p>
+                    <p class="paragraph">
+                        Uranus, similar to the other ice giant <a href="neptune.html">Neptune</a>, consists of volatiles (ices), whereas the gas giants are mostly made up of hydrogen and helium. 
+                        Uranus has a ring system like other giants. 
                         Its axis of rotation is tilted sideways, nearly into the plane of its solar orbit. 
-                        27 moons are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        27 <a href="natural-satellite.html">moons</a> are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
                     </p>
+                    <p class="paragraph">
+                        Voyager 2 is the only spacecraft that has visited Uranus.
+                        Several proposals were made for missions to Uranus, but none are yet realised.
+                    </p>
                 </div>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="Discovery">Discovery</h2>
+                <p class="paragraph">
+                    Uranus was observed before it was proven to be a planet.
+                    The earliest definite record is in 1690, when the english astronomer John Flamsteed catalogued it as 34 Tauri.
+                    In 1781 sir William Herschel looked through a telescope, discovering the object.
+                    He originally mistook it for a comet, but based on his findings, other astronomers identified it as a planet.
+                </p>
+                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+                <h3 class="paragraphsubheader" id="Size">Size</h3>
+                <p class="paragraph">
+                </p>
+                <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+                <p class="paragraph">
+                </p>
+                <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
+                <p class="paragraph">
+                </p>
+                <h3 class="paragraphsubheader" id="Rings">Rings</h3>
+                <p class="paragraph">
+                </p>
+                <h2 class="paragraphheader" id="Satellites">Satellites</h2>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:122px;">
+                        <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
+                        <p class="caption">Titania, the biggest moon of Uranus</p>
+                    </div>
+                    <p class="paragraph">
+                        There are 27 <a href="natural-satellite.html">moons</a> known to orbit Uranus, five of which are round.
+                        All of the moons are named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        The biggest one is Titania, followed by Oberon, Umbriel, Ariel and the smallest - Miranda.
+                        All of the moons are relatively dark, with Umbriel being the darkest.
+                        They are made of rock and ice and feature craters, canyons and scarps.
+                        Miranda is unique, as it features extremely large scarps on it's surface like the 20km high Verona Rupes.
+                    </p>
+                    <p class="paragraph">
+                        The other 22 moons are divided into inner and irregular.
+                        The inner moons orbit within Miranda's orbit, the closest to Uranus of the five round moons.
+                        The biggest of them is Puck.
+                        All of the  irregular moons orbit outside Oberon's orbit, the farthest round moon from Uranus.
+                        They orbit in retrograde, with the exception of Margaret.
+                        Sycorax is the largest moon of this group.
+                    </p>
+                </div>
+                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <p class="paragraph">
+                </p>
                 <h4 id="ExternalLinks">External links</h4>
                 <ul>
                     <li>
