Finished Uranus page

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -318,8 +318,8 @@
                         The lunar gravitational attraction causes tides on Earth.
                     </p>
                     <p class="paragraph">
-                        It is also the only natural astronomic body other than Earth that has been visited by people during NASA's Appolo mission. 
-                        The Artemis mission is a follow-up to Appolo, with the uncrewed Artemis 1 already ongoing.
+                        It is also the only natural astronomic body other than Earth that has been visited by people during NASA's Apollo mission. 
+                        The Artemis mission is a follow-up to Apollo, with the uncrewed Artemis 1 already ongoing.
                     </p>
                 </div>
                 <h4 id="ExternalLinks">External links</h4>
