--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -131,6 +131,14 @@
                 </div>
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
+                    In English and many other languages, Uranus is the only planet named after a Greek god instead of a Roman god.
+                    It is named after Uranus, the personification of the sky.
+                    The name was originally proposed by Johann Bode, who suggested that the planet is named similarly to the other planets.
+                    Names that were suggested earlier were "Georgium Sidum" and "Herschel".
+                </p>
+                <p class="paragraph">
+                    In Chinese, Japanese, Korean, and Vietnamese, its name is literally translated as the "sky king star" (天王星), refering to Uranus being a sky god.
+                    In Hindi the planet is named after the charioteer god Aruna (अरुण).
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
@@ -139,22 +147,67 @@
                     In 1781 sir William Herschel looked through a telescope, discovering the object.
                     He originally mistook it for a comet, but based on his findings, other astronomers identified it as a planet.
                 </p>
-                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
-                <p class="paragraph">
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:262px;">
+                        <img class="articleimage" src="../assets/images/other/uranus-tilt.jpg" alt="Uranus axial tilt" width="260" height="383">
+                        <p class="caption">Uranus and its rings, the axial tilt is almost parallel to the ecliptic, Hubble Space Telescope</p>
+                    </div>
+                    <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                    <p class="paragraph">
+                        It takes Uranus 17 days to complete a rotation around it's axis.
+                        Some features move faster and complete a rotation for even less.
+                        The planet has an extreme axial tilt of 82.23° and rotates retrograde, similarly to <a href="venus.html">Venus</a>.
+                        The reason is unknown, but it is suggested that a protoplanet collided with Uranus, causing it's almost parallel to the ecliptic.
+                    </p>
+                    <p class="paragraph">
+                        Uranus is 20 AU away from the Sun on average, with a perihelion of 18.3 AU and an aphelion of 20.1 AU from the Sun.
+                        The eccentricity is 0.047.
+                        Early observations of Uranus lead to the discovery of a planet that influenced the Uranian orbit - <a href="neptune.html">Neptune</a>.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
                 <p class="paragraph">
+                    Uranus has a radius of 25,362 km, four times that of <a href="earth.html">Earth</a>.
+                    Uranus is slightly larger than Neptune, but less massive.
                 </p>
                 <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
                 <p class="paragraph">
+                    The standard model of the Uranian structure is that it consists of three layers: a silicate/metallic core, an icy (water, ammonia and methane) mantle and an outer gaseous hydrogen/helium atmosphere.
+                    The core is only half the size of Earth and comprises supercritical liquid iron, nickel and silicates.
+                    The surrounding mantle is made of supercritical volatiles.
+                    These volatiles, also called ices, are what makes Uranus an ice giant.
+                    Due to the high pressure and temperatures in the mantle, it is suggested that diamond rains appear.
+                    This process also appears on other giant planets.
                 </p>
                 <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
                 <p class="paragraph">
+                    Uranus has an atmosphere composed of mostly hydrogen and helium.
+                    There are trace amounts of other elements, like methane, which gives Uranus it's pale blue color.
+                    The Uranian atmosphere can be divided into the troposphere, the stratosphere and a hot thermosphere.
+                    Within the troposphere, methane clouds form at 1.2 bar; ammonia and hydrogen sulfide clouds between 3 and 10 bars, ammonium hydrosulfide clouds at 20-40 bars and water clouds at 50 bars and lower.
+                    Not much is known about the atmosphere and several proposals for a Uranus atmospheric probe were made.
                 </p>
-                <h3 class="paragraphsubheader" id="Rings">Rings</h3>
                 <p class="paragraph">
+                    The atmosphere has little features - during its flyby, Voyager 2 saw only a few discrete clouds and some dark spots.
+                    More recent observations reveal that Uranus exhibits dynamic clouds when approaching equinox.
                 </p>
+                <div class="articlediv">
+                    <div class="captionbox right" style="width:303.5px;">
+                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus" width="301.5" height="360">
+                        <p class="caption">Location of the rings of Uranus, its inner moons and Miranda</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Rings">Rings</h3>
+                    <p class="paragraph">
+                        Uranus, like other giants, has a low-albedo ring system.
+                        They are separated into three groups.
+                        The main rings are nine - 6, 5, 4, α, β, η, γ, δ, and ε.
+                        They are narrow and composed of tiny particle and dust.
+                        Two other rings - ζ and λ are known as dusty rings.
+                        ζ is the innermost of all the rings and λ is located between δ and ε.
+                        There are two outer rings: the inner ν is reddish and the outer μ is blue.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="Satellites">Satellites</h2>
                 <div class="articlediv">
                     <div class="captionbox right" style="width:122px;">
@@ -180,6 +233,10 @@
                 </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
+                    Voyager 2 was the only spacecraft to visit Uranus in 1986.
+                    During its flyby, it studied the atmosphere, weather and magnetosphere of Uranus, the five biggest moons and discovered ten smaller ones.
+                    A number of missions to Uranus have been proposed.
+                    Such propositions include several missions by ESA (MUSE, ODINUS and Uranus Pathfinder), NASA (Oceanus and NASA Uranus orbiter and probe) and CNSA (Tianwen-4)
                 </p>
                 <h4 id="ExternalLinks">External links</h4>
                 <ul>
