--- a/pages/earth.html
+++ b/pages/earth.html
@@ -124,7 +124,7 @@
                         Earth is a <a href="planet.html">planet</a> in the Solar System.
                         It is the third planet from the Sun and the biggest of the terrestrial planets.
                         It is the only place that is known to harbor life.
-                        Earth has one natural satellite - Moon.
+                        Earth has one natural satellite - <a href="moon.html">Moon</a>.
                     </p>
                     <p class="paragraph">
                         It contains liquid water on 71% of the surface and the remaining 29% is land.
@@ -311,6 +311,7 @@
                         <p class="caption">The Moon</p>
                     </div>
                     <h2 class="paragraphheader" id="Moon">Moon</h2>
+                    <p class="readmore">Main article: <a href="moon.html">Moon</a></p>
                     <p class="paragraph">
                         The Moon is the only <a href="natural-satellite.html">natural satellite</a> orbiting Earth. 
                         It is the fifth largest satellite in the Solar System and is the largest relative to it's parent planet. 
