--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -222,7 +222,7 @@
                     Jupiter has four gravitationally rounded <a href="natural-satellite.html">moons</a> - Ganymede, Callisto, Io and Europa. 
                     They were discovered by Galileo Galilei in 1610 and are called Galilean moons. 
                     Ganymede is the largest known satellite and is bigger than <a href="mercury.html">Mercury</a>. 
-                    All but Europa are larger than Earth's Moon. 
+                    All but Europa are larger than Earth's <a href="moon.html">Moon</a>. 
                     Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
                 </p>
                 <p class="paragraph">
