--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -161,7 +161,7 @@
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
                     <p class="paragraph">
-                        Mercury has a similar surface to that of the Moon, full of craters and plains (mare).
+                        Mercury has a similar surface to that of the <a href="moon.html">Moon</a>, full of craters and plains (mare).
                         The largest crater is the 1550 km wide Caloris Basin, which is surrounded by a 2 km tall concentric ring.
                         The antipode of Caloris is a hilly terrain, likely created from the impact.
                         More recent crater feature ray systems.
