--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -120,7 +120,7 @@
                 </p>
                 <h2 class="paragraphheader" id="HistoryAndDefiningSatellites">History and defining satellites</h2>
                 <p class="paragraph">
-                    <a href="earth.html">Earth</a>'s Moon is the first known satellite. 
+                    <a href="earth.html">Earth</a>'s <a href="moon.html">Moon</a> is the first known satellite. 
                     Because other satellites weren't discovered, the Moon was considered a planet. 
                     Galileo's discovery of the Galilean moons of <a href="jupiter.html">Jupiter</a> lead to the creation of the new class of objects. 
                     The first one to call them "satellites" was Johannes Kepler.
@@ -136,6 +136,7 @@
                         <p class="caption">The Moon</p>
                     </div>
                     <h3 class="paragraphsubheader" id="TheMoon">The Moon</h3>
+                    <p class="readmore">Main article: <a href="moon.html">Moon</a></p>
                     <p class="paragraph">
                         The Moon is the only natural satellite orbiting <a href="earth.html">Earth</a>. 
                         It is also the only natural astronomic body other than Earth that has been visited by people. 
