--- a/pages/planet.html
+++ b/pages/planet.html
@@ -129,7 +129,7 @@
                 <p class="paragraph">
                     Other objects used to be considered planets, but were later considered as completely different bodies. 
                     For example, the Sun was considered a planet orbiting the Earth, but was later discovered that it is a star. 
-                    The <a href="natural-satellite.html">satellites</a> of planets like Earth's Moon, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
+                    The <a href="natural-satellite.html">satellites</a> of planets like Earth's <a href="moon.html">Moon</a>, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
                 </p>
                 <p class="paragraph">
                     The same can be said for the asteroids in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like Pluto. 
@@ -201,7 +201,7 @@
                     <p class="paragraph">
                         Earth is the biggest terrestrial planet in the solar system and is the only one known to have life. 
                         It features liquid water, an athmosphere consisting of nitrogen and oxygen, volcanism and plate tectonics. 
-                        It has one natural satellite - the Moon.
+                        It has one natural satellite - the <a href="moon.html">Moon</a>.
                     </p>
                 </div>
                 <div class="articlediv">
