--- a/pages/venus.html
+++ b/pages/venus.html
@@ -238,7 +238,7 @@
                     </div>
                     <p class="paragraph">
                         Galileo Galilei observed the planet through a telescope.
-                        He noticed that Venus was showing phases similar to the Moon, which would prove it's proximity to the Sun.
+                        He noticed that Venus was showing phases similar to the <a href="moon.html">Moon</a>, which would prove it's proximity to the Sun.
                         The atmosphere was discovered by Mikhail Lomonosov.
                         It was later studied by astronomers Johann Schröter and Chester Smith Lyman, who noticed the crescent shape of Venus to extend and a complete ring forming at inferion conjunction.
                         This is a result of the scattered sunlight in the atmosphere.
