--- a/pages/moon.html
+++ b/pages/moon.html
@@ -174,6 +174,25 @@
                 </p>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <p class="paragraph">
+                    The Moon is 3.7 times smaller than Earth, with a mean radius of 1,737.4 km.
+                    It has a similar structure to Earth.
+                    The core is divided into a solid inner and a liquid outer core, composed of iron and some nickel.
+                    The mantle is made of iron-rich silicates like olivine and pyroxene and the crust has lighter minerals.
+                </p>
+                <p class="paragraph">
+                    The near side of the Moon features most of the Lunar maria - valleys, formed by lava cooling.
+                    They have a darker color than the rest of the surface.
+                    Some of these maria are Mare Imbrium, Oceanus Procellarum, Mare Crisium, Mare Frigoris, Mare Cognitum, Mare Tranquillitatis, Mare Fecunditatis and more.
+                    The rest of the surface is lighter and covered with craters.
+                    The largest impact basin is the South Pole-Aitken basin, which is one of the biggest known impact craters.
+                    Most of the Lunar maria basins are located in a impact basin, the biggest of which is Imbrium (Procellarum is not confirmed to be an impact basin.)
+                    Other craters include Tycho, Schrödinger basin, Van De Graaf, etc.
+                </p>
+                <p class="paragraph">
+                    The moon has a very thin exosphere and contains ice water.
+                    During the Chandrayaan-1 mission the first evidences of water on the Moon were found.
+                    Subsequent missions further proved those discoveries.
+                    Water ice on the Moon is concentrated around the poles within deep shadowy impact craters.
                 </p>
                 <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
                 <p class="paragraph">
